fixed spacing for comments

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,3 +18,9 @@
 .user_image{
   border-radius: 40px;
 }
+#addComment{
+  text-align: center;
+}
+.displayComment{
+  margin: 40px;
+}
